--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 34
         versionCode 1
-        versionName '0.1'
+        versionName '0.3'
     }
 
     buildTypes {
@@ -73,4 +73,12 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation files('libs/SmartPos_1.8.1_R231213.jar')
+    implementation files('libs/core-3.2.1.jar')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation ('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2')
+    implementation ('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2')
+}
